--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=4000
-MONGO_URI=mongodb+srv://clgrizvan_db_user:267267@attentence.xcquffo.mongodb.net/
+MONGO_URI=mongodb+srv://clgrizvan_db_user:267267@attentence.xcquffo.mongodb.net/attendance 
